<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="149dp"
                    android:background="@drawable/logo"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registerFrg_registerTxt"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="35dp">

                <EditText
                    android:id="@+id/register_emailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerFrg_emailHintTxt"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_acount_email"
                    android:background="@drawable/edittext_rounded"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/register_passwordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerFrg_passwordHintTxt"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_password"
                    android:background="@drawable/edittext_rounded"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"/>
                <EditText
                    android:id="@+id/register_password2Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerFrg_password2HintTxt"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_password"
                    android:background="@drawable/edittext_rounded"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/register_firstnameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerFrg_firstnameHintTxt"
                    android:drawableLeft="@drawable/ic_user"
                    android:background="@drawable/edittext_rounded"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/register_lastnameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerFrg_lastnameHintTxt"
                    android:drawableLeft="@drawable/ic_user"
                    android:background="@drawable/edittext_rounded"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/register_phonenumberTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerFrg_phonenumberHintTxt"
                    android:maxLength="10"
                    android:inputType="number"
                    android:drawableLeft="@drawable/ic_phonenumber"
                    android:background="@drawable/edittext_rounded"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorLine"/>

                <Button
                    android:id="@+id/register_registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textColor="@color/colorWhite"
                    android:text="@string/registerBtn"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>