<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="299dp"
                    android:background="@drawable/logo"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="35dp">

                <EditText
                    android:id="@+id/login_emailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginFrg_emailHintTxt"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_acount_email"
                    android:background="@drawable/edittext_rounded"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/login_passwordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginFrg_passwordHintTxt"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_password"
                    android:background="@drawable/edittext_rounded"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loginFrg_passwordForgotTxt"
                    android:textSize="16dp"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="5dp"/>

                <Button
                    android:id="@+id/login_loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/loginBtn"
                    android:textColor="@color/colorWhite"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>