<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="10dp"
        android:elevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/frg_menu_pets_add_backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petFrg_addpet"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:gravity="end"/>

        </LinearLayout>

    </LinearLayout>
    <!--End Frame 1 (Back Button)-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:background="@drawable/rounded">

                <ImageView
                    android:id="@+id/frg_menu_pets_add_images"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@mipmap/ic_camera"
                    android:scaleType="fitXY"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/petFrg_petType"
                        android:textSize="20dp"/>

                    <Spinner
                        android:id="@+id/frg_menu_pets_add_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_rounded"
                        android:layout_marginBottom="5dp"
                        android:spinnerMode="dialog"
                        android:prompt="@string/petFrg_petType">

                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/petFrg_petName"
                        android:textSize="20dp"/>

                    <EditText
                        android:id="@+id/frg_menu_pets_add_petname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/edittext_rounded"
                        android:inputType="text"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/petFrg_petSex"
                        android:textSize="20dp"/>

                    <Spinner
                        android:id="@+id/frg_menu_pets_add_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_rounded"
                        android:layout_marginBottom="5dp"
                        android:spinnerMode="dialog"
                        android:prompt="@string/petFrg_petSex">

                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/petFrg_petAge"
                        android:textSize="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginRight="5dp">

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:text="@string/petFrg_petAgeDay"
                            android:textSize="20dp"/>

                        <Spinner
                            android:id="@+id/frg_menu_pets_add_age_day"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/spinner_rounded"
                            android:layout_marginBottom="5dp"
                            android:spinnerMode="dialog"
                            android:prompt="@string/petFrg_petAge">

                        </Spinner>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginRight="5dp">

                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/petFrg_petAgeMonth"
                            android:textSize="20dp"/>

                        <Spinner
                            android:id="@+id/frg_menu_pets_add_age_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/spinner_rounded"
                            android:layout_marginBottom="5dp"
                            android:spinnerMode="dialog"
                            android:prompt="@string/petFrg_petAge">

                        </Spinner>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:text="@string/petFrg_petAgeYear"
                            android:textSize="20dp"/>

                        <Spinner
                            android:id="@+id/frg_menu_pets_add_age_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/spinner_rounded"
                            android:layout_marginBottom="5dp"
                            android:spinnerMode="dialog"
                            android:prompt="@string/petFrg_petAge">

                        </Spinner>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button"
                    android:text="@string/petFrg_addPetBtn"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>